Added swagger, rewrote mappers without libs due to issue, fixed some 500 errors, added delete, fixing errors